--- a/1. Introduction to Apache Kafka.md
+++ b/1. Introduction to Apache Kafka.md
@@ -10,7 +10,7 @@ Companies start when they have a **source system** that produces data, which has
 
 <center style="padding: 0 35%;">
 
-![Screenshot 2023-09-07 at 9.37.08 PM.png](../_resources/Screenshot%202023-09-07%20at%209.37.08%20PM.png)
+![Screenshot 2023-09-07 at 9.37.08 PM.png](./_resources/Screenshot%202023-09-07%20at%209.37.08%20PM.png)
 
 </center>
 
@@ -18,7 +18,7 @@ As companies grow, they have many **source systems** and many **target systems**
 
 <center style="padding: 0 15%;">
 
-![Screenshot 2023-09-07 at 9.38.09 PM.png](../_resources/Screenshot%202023-09-07%20at%209.38.09%20PM.png)
+![Screenshot 2023-09-07 at 9.38.09 PM.png](./_resources/Screenshot%202023-09-07%20at%209.38.09%20PM.png)
 
 </center>
 
@@ -28,7 +28,7 @@ As companies grow, they have many **source systems** and many **target systems**
 
 <center style="padding: 0 20%;">
 
-![Screenshot 2023-09-07 at 9.40.45 PM.png](../_resources/Screenshot%202023-09-07%20at%209.40.45%20PM.png)
+![Screenshot 2023-09-07 at 9.40.45 PM.png](./_resources/Screenshot%202023-09-07%20at%209.40.45%20PM.png)
 
 </center>
 
@@ -40,7 +40,7 @@ Here is a real-world example of how Apache Kafka uses different source and targe
 
 <center style="padding: 0 20%;">
 
-![Screenshot 2023-09-07 at 9.41.29 PM.png](../_resources/Screenshot%202023-09-07%20at%209.41.29%20PM.png)
+![Screenshot 2023-09-07 at 9.41.29 PM.png](./_resources/Screenshot%202023-09-07%20at%209.41.29%20PM.png)
 
 </center>
 
