--- a/10. Theory Round-Up.md
+++ b/10. Theory Round-Up.md
@@ -8,6 +8,6 @@ created: 2023-09-10 22:09:28Z
 
 <center>
 
-![kafka arch.svg](../_resources/kafka%20arch.svg)
+![kafka arch.svg](./_resources/kafka%20arch.svg)
 
 </center>
