--- a/3. Producers and message keys.md
+++ b/3. Producers and message keys.md
@@ -11,7 +11,7 @@ created: 2023-09-08 04:32:57Z
 -   In case of broker failure, **Producers** will automatically recover
 <center style="padding: 0 15%;">
 
-![Screenshot 2023-09-07 at 10.35.27 PM.png](../_resources/Screenshot%202023-09-07%20at%2010.35.27%20PM.png)
+![Screenshot 2023-09-07 at 10.35.27 PM.png](./_resources/Screenshot%202023-09-07%20at%2010.35.27%20PM.png)
 
 </center>
 
@@ -26,7 +26,7 @@ This load is balanced across brokers thanks to the number of partitions! This is
 
 <center style="padding: 0 15%;">
 
-![Screenshot 2023-09-07 at 10.42.51 PM.png](../_resources/Screenshot%202023-09-07%20at%2010.42.51%20PM.png)
+![Screenshot 2023-09-07 at 10.42.51 PM.png](./_resources/Screenshot%202023-09-07%20at%2010.42.51%20PM.png)
 
 </center>
 
@@ -52,7 +52,7 @@ messages:[
 
 <center style="padding: 0 20%;">
 
-![Screenshot 2023-09-07 at 10.53.01 PM.png](../_resources/Screenshot%202023-09-07%20at%2010.53.01%20PM.png)
+![Screenshot 2023-09-07 at 10.53.01 PM.png](./_resources/Screenshot%202023-09-07%20at%2010.53.01%20PM.png)
 
 </center>
 
@@ -71,7 +71,7 @@ Then, the message a producer creates is sent to Apache Kafka for storage.
 
 <center style="padding: 0 32%;">
 
-![Screenshot 2023-09-07 at 10.59.39 PM.png](../_resources/Screenshot%202023-09-07%20at%2010.59.39%20PM.png)
+![Screenshot 2023-09-07 at 10.59.39 PM.png](./_resources/Screenshot%202023-09-07%20at%2010.59.39%20PM.png)
 
 </center>
 
@@ -81,7 +81,7 @@ Then, the message a producer creates is sent to Apache Kafka for storage.
 
 <center style="padding: 0 10%;">
 
-![Screenshot 2023-09-07 at 11.05.23 PM.png](../_resources/Screenshot%202023-09-07%20at%2011.05.23%20PM.png)
+![Screenshot 2023-09-07 at 11.05.23 PM.png](./_resources/Screenshot%202023-09-07%20at%2011.05.23%20PM.png)
 
 </center>
 
