--- a/5a. Consumer Group.md
+++ b/5a. Consumer Group.md
@@ -10,7 +10,7 @@ All consumers within an application read as a consumer group. Each consumer from
 
 <center style="padding: 0 20%;">
 
-![Screenshot 2023-09-08 at 11.40.04 AM.png](../_resources/Screenshot%202023-09-08%20at%2011.40.04%20AM.png)
+![Screenshot 2023-09-08 at 11.40.04 AM.png](./_resources/Screenshot%202023-09-08%20at%2011.40.04%20AM.png)
 
 </center>
 
@@ -20,7 +20,7 @@ Each consumer reads from one partition in this case, but the extra consumer will
 
 <center style="padding: 0 15%;">
 
-![Screenshot 2023-09-08 at 11.41.02 AM.png](../_resources/Screenshot%202023-09-08%20at%2011.41.02%20AM.png)
+![Screenshot 2023-09-08 at 11.41.02 AM.png](./_resources/Screenshot%202023-09-08%20at%2011.41.02%20AM.png)
 
 </center>
 
@@ -30,7 +30,7 @@ In Apache Kafka, it is common to have multiple consumer groups reading from the 
 
 <center style="padding: 0 10%;">
 
-![Screenshot 2023-09-08 at 11.45.19 AM.png](../_resources/Screenshot%202023-09-08%20at%2011.45.19%20AM.png)
+![Screenshot 2023-09-08 at 11.45.19 AM.png](./_resources/Screenshot%202023-09-08%20at%2011.45.19%20AM.png)
 
 </center>
 
@@ -43,7 +43,7 @@ Kafka stores the offset at which a consumer group has been reading inside the Ka
 -   Therefore, if a consumer dies, it can start consuming messages from where it has left off to the committed consumer offset.
 <center style="padding: 0 20%;">
 
-![Screenshot 2023-09-08 at 1.41.28 PM.png](../_resources/Screenshot%202023-09-08%20at%201.41.28%20PM.png)
+![Screenshot 2023-09-08 at 1.41.28 PM.png](./_resources/Screenshot%202023-09-08%20at%201.41.28%20PM.png)
 
 </center>
 
