--- a/7. Topics and Replication.md
+++ b/7. Topics and Replication.md
@@ -15,7 +15,7 @@ This way, if a broker is down, it can be replaced by another broker with a repli
 
  <center style="padding: 0 15%">
 
-![Screenshot 2023-09-10 at 11.14.42 AM.png](../_resources/Screenshot%202023-09-10%20at%2011.14.42%20AM.png)
+![Screenshot 2023-09-10 at 11.14.42 AM.png](./_resources/Screenshot%202023-09-10%20at%2011.14.42%20AM.png)
 
 </center>
 
@@ -23,7 +23,7 @@ This way, if a broker is down, it can be replaced by another broker with a repli
 
  <center style="padding: 0 15%">
 
-![Screenshot 2023-09-10 at 11.15.25 AM.png](../_resources/Screenshot%202023-09-10%20at%2011.15.25%20AM.png)
+![Screenshot 2023-09-10 at 11.15.25 AM.png](./_resources/Screenshot%202023-09-10%20at%2011.15.25%20AM.png)
 
 </center>
 
@@ -37,7 +37,7 @@ Other brokers will replicate the data, given the replication factor. ⚠️ If a
 
  <center style="padding: 0 15%">
 
-![Screenshot 2023-09-10 at 11.22.44 AM.png](../_resources/Screenshot%202023-09-10%20at%2011.22.44%20AM.png)
+![Screenshot 2023-09-10 at 11.22.44 AM.png](./_resources/Screenshot%202023-09-10%20at%2011.22.44%20AM.png)
 
 </center>
  <small>N.B.: The leader of a partition is marked with a start ⭐ in the figure above </small>
@@ -48,7 +48,7 @@ Other brokers will replicate the data, given the replication factor. ⚠️ If a
 
  <center style="padding: 0 15%">
 
-![Screenshot 2023-09-10 at 12.06.33 PM.png](../_resources/Screenshot%202023-09-10%20at%2012.06.33%20PM.png)
+![Screenshot 2023-09-10 at 12.06.33 PM.png](./_resources/Screenshot%202023-09-10%20at%2012.06.33%20PM.png)
 
 </center>
 
@@ -59,7 +59,7 @@ Other brokers will replicate the data, given the replication factor. ⚠️ If a
 
  <center style="padding: 0 10%">
 
-![Screenshot 2023-09-10 at 12.08.59 PM.png](../_resources/Screenshot%202023-09-10%20at%2012.08.59%20PM.png)
+![Screenshot 2023-09-10 at 12.08.59 PM.png](./_resources/Screenshot%202023-09-10%20at%2012.08.59%20PM.png)
 
 </center>
 
@@ -71,7 +71,7 @@ Leader changes can result in **log inconsistency**:
 
  <center style="padding: 0 15%">
 
-![Screenshot 2023-09-10 at 11.49.53 AM.png](../_resources/Screenshot%202023-09-10%20at%2011.49.53%20AM.png)
+![Screenshot 2023-09-10 at 11.49.53 AM.png](./_resources/Screenshot%202023-09-10%20at%2011.49.53%20AM.png)
 
 </center>
 
