--- a/8c. Idempotent producer.md
+++ b/8c. Idempotent producer.md
@@ -8,13 +8,13 @@ created: 2023-09-21 01:48:46Z
 
 Regular producer can introduce duplicate messages when retrying send data that has not been ack.
 
-![aa8892da98f89eee694372c5498e1123.png](../_resources/aa8892da98f89eee694372c5498e1123.png)
+![aa8892da98f89eee694372c5498e1123.png](./_resources/aa8892da98f89eee694372c5498e1123.png)
 
 # Idempotent Producer
 
 In kafka `v0.11+` you can define an idempotent producer which will not duplicate messages
 
-![51a4e94326fa263ccc0ca43f47f58ec8.png](../_resources/51a4e94326fa263ccc0ca43f47f58ec8.png)
+![51a4e94326fa263ccc0ca43f47f58ec8.png](./_resources/51a4e94326fa263ccc0ca43f47f58ec8.png)
 
 Idempotent producer are a great garantee as a stable and safe pipeline. From `v3.0` they are becoming the default! **Recomande to use it**.
 When u set the Idempotent producer:
