--- a/8e. Messages compression.md
+++ b/8e. Messages compression.md
@@ -21,7 +21,7 @@ Compression is more effective for bigger batches of data sent.
 
 <center style="padding: 0 10%">
 
-![55b9546250d3fb4456d95809c27dc69c.png](../_resources/55b9546250d3fb4456d95809c27dc69c.png)
+![55b9546250d3fb4456d95809c27dc69c.png](./_resources/55b9546250d3fb4456d95809c27dc69c.png)
 
 </center>
 
@@ -57,7 +57,7 @@ Compression is more effective for bigger batches of data sent.
 
 <center style="padding: 0 10%">
 
-![55b9546250d3fb4456d95809c27dc69c.png](../_resources/55b9546250d3fb4456d95809c27dc69c.png)
+![55b9546250d3fb4456d95809c27dc69c.png](./_resources/55b9546250d3fb4456d95809c27dc69c.png)
 
 </center>
 
