--- a/9. Zookeeper.md
+++ b/9. Zookeeper.md
@@ -20,7 +20,7 @@ created: 2023-09-10 21:04:31Z
 
 <center style="padding: 0 10%">
 
-![Screenshot 2023-09-10 at 3.29.17 PM.png](../_resources/Screenshot%202023-09-10%20at%203.29.17%20PM.png)
+![Screenshot 2023-09-10 at 3.29.17 PM.png](./_resources/Screenshot%202023-09-10%20at%203.29.17%20PM.png)
 
 </center>
 
