--- a/2. Kafka Topics.md
+++ b/2. Kafka Topics.md
@@ -25,7 +25,7 @@ Topics are split into **partitions** (e.g. 100s), and the messages within each p
 
 <center style="padding: 0 10%;">
 
-![Screenshot 2023-09-07 at 10.11.27 PM.png](../_resources/Screenshot%202023-09-07%20at%2010.11.27%20PM.png)
+![Screenshot 2023-09-07 at 10.11.27 PM.png](./_resources/Screenshot%202023-09-07%20at%2010.11.27%20PM.png)
 
 </center>
 
