--- a/4. Consumers.md
+++ b/4. Consumers.md
@@ -17,7 +17,7 @@ Consumers read data from a topic (identified by name) - pull model
 
 <center style="padding: 0 10%;">
 
-![Screenshot 2023-09-07 at 11.37.27 PM.png](../_resources/Screenshot%202023-09-07%20at%2011.37.27%20PM.png)
+![Screenshot 2023-09-07 at 11.37.27 PM.png](./_resources/Screenshot%202023-09-07%20at%2011.37.27%20PM.png)
 
 </center>
 
@@ -36,7 +36,7 @@ The serialization and deserialization must not change during a topic lifecycle<s
 
 <center style="padding: 0 32%;">
 
-![Screenshot 2023-09-07 at 11.47.48 PM.png](../_resources/Screenshot%202023-09-07%20at%2011.47.48%20PM.png)
+![Screenshot 2023-09-07 at 11.47.48 PM.png](./_resources/Screenshot%202023-09-07%20at%2011.47.48%20PM.png)
 
 </center>
 
