--- a/5b. Consumer Group and Partition Rebalance Strateg.md
+++ b/5b. Consumer Group and Partition Rebalance Strateg.md
@@ -11,7 +11,7 @@ created: 2023-09-15 16:12:41Z
 -   It also happens if an administrator adds new partitions to a topic
 <center style="padding: 0 10%">
 
-![db28353f696a5865c688bcef57d413b6.png](../_resources/db28353f696a5865c688bcef57d413b6.png)
+![db28353f696a5865c688bcef57d413b6.png](./_resources/db28353f696a5865c688bcef57d413b6.png)
 
 </center>
 
@@ -25,7 +25,7 @@ When a new consumer joins the consumer group:
 -   Consumers are not guaranteed to return to their original partition.
 <center>
 
-![634a2588fb31f31aa2551c3352b504a0.png](../_resources/634a2588fb31f31aa2551c3352b504a0.png)
+![634a2588fb31f31aa2551c3352b504a0.png](./_resources/634a2588fb31f31aa2551c3352b504a0.png)
 
 </center>
 
@@ -39,7 +39,7 @@ When a new consumer joins the consumer group:
 -   Avoids stopping all consumers
 <center>
 
-![4015077374f6dfeda36c2083335ae0d8.png](../_resources/4015077374f6dfeda36c2083335ae0d8.png)
+![4015077374f6dfeda36c2083335ae0d8.png](./_resources/4015077374f6dfeda36c2083335ae0d8.png)
 
 </center>
 
@@ -65,6 +65,6 @@ By default, when a consumer leaves the group, the partition is reassigned to ano
 
 <center>
 
-![defb9801e82d8e603c399b35ce75649a.png](../_resources/defb9801e82d8e603c399b35ce75649a.png)
+![defb9801e82d8e603c399b35ce75649a.png](./_resources/defb9801e82d8e603c399b35ce75649a.png)
 
 </center>
