--- a/6. Brokers and Topics.md
+++ b/6. Brokers and Topics.md
@@ -13,7 +13,7 @@ A kafka cluster is composed by <u> multiple brokers</u><sup>[[1]](#1)</sup>. Eac
 
 <center style="padding: 0 20%;">
 
-![Screenshot 2023-09-08 at 2.43.47 PM.png](../_resources/Screenshot%202023-09-08%20at%202.43.47%20PM.png)
+![Screenshot 2023-09-08 at 2.43.47 PM.png](./_resources/Screenshot%202023-09-08%20at%202.43.47%20PM.png)
 
 </center>
 
@@ -24,7 +24,7 @@ A kafka cluster is composed by <u> multiple brokers</u><sup>[[1]](#1)</sup>. Eac
 
 <center style="padding: 0 20%;">
 
-![Screenshot 2023-09-08 at 2.58.32 PM.png](../_resources/Screenshot%202023-09-08%20at%202.58.32%20PM.png)
+![Screenshot 2023-09-08 at 2.58.32 PM.png](./_resources/Screenshot%202023-09-08%20at%202.58.32%20PM.png)
 
 </center>
 
@@ -36,7 +36,7 @@ A kafka cluster is composed by <u> multiple brokers</u><sup>[[1]](#1)</sup>. Eac
 
 <center style="padding: 10%;">
 
-![Screenshot 2023-09-09 at 1.08.59 PM.png](../_resources/Screenshot%202023-09-09%20at%201.08.59%20PM.png)
+![Screenshot 2023-09-09 at 1.08.59 PM.png](./_resources/Screenshot%202023-09-09%20at%201.08.59%20PM.png)
 
 </center>
 Any Kafka client connects to a bootstrap broker, and the brokers (metadata request) respond with a list of all brokers, topics, and partitions.
