--- a/8a. Producer Ack and Topic Durability.md
+++ b/8a. Producer Ack and Topic Durability.md
@@ -8,7 +8,7 @@ created: 2023-09-10 18:10:48Z
 
 <center style="padding: 0 10%">
 
-![Screenshot 2023-09-10 at 12.35.16 PM.png](../_resources/Screenshot%202023-09-10%20at%2012.35.16%20PM.png)
+![Screenshot 2023-09-10 at 12.35.16 PM.png](./_resources/Screenshot%202023-09-10%20at%2012.35.16%20PM.png)
 
 </center>
 
@@ -74,7 +74,7 @@ Now we can better understand **topic durability**. If we have a replication fact
 
  <center style="padding: 0 15%">
 
-![Screenshot 2023-09-10 at 11.15.25 AM.png](../_resources/Screenshot%202023-09-10%20at%2011.15.25%20AM.png)
+![Screenshot 2023-09-10 at 11.15.25 AM.png](/_resources/Screenshot%202023-09-10%20at%2011.15.25%20AM.png)
 
 </center>
 
