--- a/9. Kafka KRaft.md
+++ b/9. Kafka KRaft.md
@@ -25,7 +25,7 @@ Instead of being managed by a quorum of servers in Zookeeper, now Kafka brokers 
 
 <center style="padding: 0 10%">
 
-![Screenshot 2023-09-10 at 3.59.46 PM.png](../_resources/Screenshot%202023-09-10%20at%203.59.46%20PM.png)
+![Screenshot 2023-09-10 at 3.59.46 PM.png](./_resources/Screenshot%202023-09-10%20at%203.59.46%20PM.png)
 
 </center>
 
@@ -33,4 +33,4 @@ Instead of being managed by a quorum of servers in Zookeeper, now Kafka brokers 
 
 Time shout-down operations in Apache Kafka with 2 million partitions. _Faster is better._
 
-![Screenshot 2023-09-10 at 4.04.02 PM.png](../_resources/Screenshot%202023-09-10%20at%204.04.02%20PM.png)
+![Screenshot 2023-09-10 at 4.04.02 PM.png](./_resources/Screenshot%202023-09-10%20at%204.04.02%20PM.png)
